# Gameeky

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  dev.tchx84.Gameeky.json  dev.tchx84.gameeky.json  meson.build  meson.options  pyproject.toml  qa.sh
data/: dev.tchx84.Gameeky.Coder.desktop.in  dev.tchx84.Gameeky.Entity.desktop.in  dev.tchx84.Gameeky.Player.desktop.in  dev.tchx84.Gameeky.Scene.desktop.in  dev.tchx84.Gameeky.desktop.in  dev.tchx84.Gameeky.gschema.xml  dev.tchx84.Gameeky.metainfo.xml.in  dev.tchx84.gameeky.desktop.in  dev.tchx84.gameeky.entity.desktop.in  dev.tchx84.gameeky.gschema.xml  dev.tchx84.gameeky.metainfo.xml.in  dev.tchx84.gameeky.player.desktop.in  dev.tchx84.gameeky.scene.desktop.in  meson.build
data/icons/: meson.build
docs/: README.md  meson.build  requirements.json
docs/basics/data/: headers.xml  style.css
docs/basics/en/: index.html  index.md  welcome.md
docs/basics/es/: bienvenida.md  index.md
docs/basics/html/en/: index.html
docs/basics/html/es/: index.html
docs/basics/html/hi/: index.html
docs/basics/html/nl/: index.html
docs/basics/html/pt_BR/: index.html
docs/basics/po/: es.po  gameeky.pot  hi.po  nl.po  pt_BR.po
docs/basics/src/en/: index.md
docs/basics/src/hi/: index.md
docs/en/: DOCUMENTATION.md
docs/po/: es.po  gameeky.pot  gamegeeky-docs.pot  meson.build  po4a.cfg  update-translations.sh
docs/tools/: update_html.py  update_md.py  update_po.py  update_pot.py
po/: LINGUAS  POTFILES  (+8 more)
po-docs/: po4a.cfg
src/: gameeky.gresource.xml  meson.build  requirements.json
src/gameeky/: __init__.py
src/gameeky/client/: definitions.py
src/gameeky/client/game/: dialogue.py  scene.py  service.py  stats.py
src/gameeky/client/graphics/: entity.py  highlight.py  hud.py  scene.py  status.py
src/gameeky/client/input/: cursor.py  keyboard.py
src/gameeky/client/network/: tcp.py  udp.py
src/gameeky/client/sound/: entity.py  scene.py
src/gameeky/common/: colors.py  config.py.in  debug.py  definitions.py  dialogue.py  entity.py  errors.py  logger.py  message.py  monitor.py  payload.py  scanner.py  scene.py  serializeable.py  session.py  stats.py  threaded.py  utils.py  vector.py
src/gameeky/common/widgets/: about_window.py  about_window.ui  confirmation_save_window.py  confirmation_save_window.ui  documentation.py  documentation_window.py  documentation_window.ui  documentation_wrapper.py
src/gameeky/editor/: definitions.py  dev.tchx84.Gameeky.Entity.in  dev.tchx84.Gameeky.Scene.in  dev.tchx84.gameeky.Entity.in  dev.tchx84.gameeky.Scene.in  entity.py  scene.py  style.css
src/gameeky/editor/models/: actuator_row.py  area_row.py  base_row.py  daytime_row.py  direction_row.py  entity.py  entity_row.py  entity_session.py  layer_row.py  scene.py  scene_session.py  state_row.py
src/gameeky/editor/widgets/: actuator_row.py  actuator_row.ui  actuators_row.py  actuators_row.ui  animation.py  animation_row.py  animation_row.ui  animation_settings.py  animation_settings.ui  animations_settings.py  animations_settings.ui  change_signal_helper.py  confirmation_save_window.py  confirmation_save_window.ui  confirmation_window.py  confirmation_window.ui  dropdown_helper.py  entity.py  entity_new_window.py  entity_new_window.ui  entity_open_window.py  entity_open_window.ui  entity_row.py  entity_settings.py  entity_settings.ui  entity_window.py  entity_window.ui  global_settings.py  global_settings.ui  grid.py  path_row.py  path_row.ui  paths_row.py  paths_row.ui  scene.py  scene_edit_window.py  scene_edit_window.ui  scene_entity_popover.py  scene_entity_popover.ui  scene_entity_window.py  (+20 more)
src/gameeky/launcher/: dev.tchx84.Gameeky.Launcher.in  launcher.py  style.css
src/gameeky/launcher/models/: project.py  service.py  session.py
src/gameeky/launcher/widgets/: confirmation_create_window.py  confirmation_create_window.ui  confirmation_window.py  confirmation_window.ui  project_edit_window.py  project_edit_window.ui  project_export_window.py  project_export_window.ui  project_import_window.py  project_import_window.ui  project_new_window.py  project_new_window.ui  project_row.py  project_row.ui  project_row_popover.py  project_row_popover.ui  project_settings.py  project_settings.ui  window.py  window.ui
src/gameeky/player/: dev.tchx84.Gameeky.Player.in  player.py  style.css
src/gameeky/player/models/: session_guest.py  session_host.py
src/gameeky/player/widgets/: actions_popover.py  actions_popover.ui  actions_popup.py  dialogue.py  dialogue.ui  highlight.py  hud.py  scene.py  session_join_window.py  session_join_window.ui  session_new_window.py  session_new_window.ui  shortcuts_window.py  shortcuts_window.ui  window.py  window.ui
src/gameeky/plugins/: __init__.py
src/gameeky/portal/: dev.tchx84.gameeky.Portal.in  portal.py  style.css
src/gameeky/portal/models/: session.py
src/gameeky/portal/widgets/: confirmation_window.py  confirmation_window.ui  project_edit_window.py  project_edit_window.ui  project_new_window.py  project_row.py  project_row.ui  project_settings.py  project_settings.ui  window.py  window.ui
src/gameeky/server/: main.py
src/gameeky/server/game/: definitions.py  entity.py  partition.py  scene.py  service.py
src/gameeky/server/game/actuators/: activates.py  activates_i.py  affects.py  affects_i.py  affects_u.py  aggroes.py  base.py  collapses.py  collapses_t.py  destroys.py  destroys_i.py  deteriorates.py  drops.py  exhausts.py  follows.py  interacts.py  propulses.py  requires.py  roams.py  rotates_i.py  says.py  says_i.py  spawns.py  takes.py  targets.py  teleports.py  teleports_i.py  transmutes.py  triggers.py  triggers_i.py  uses.py
src/gameeky/server/game/handlers/: base.py  destroy.py  drop.py  exhaust.py  idle.py  interact.py  move.py  rotate.py  take.py  use.py
src/gameeky/server/network/: tcp.py  udp.py
tests/: meson.build  requirements.json  test_serializeable.py  test_service.py
tests/data/: gameeky.project
tests/data/entities/: default.entity  default.json  grass.entity  grass.json  tool.entity  tool.json
tests/data/scenes/: default.json  default.scene
(+264 files in other folders)
