[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "valley"
description = ""
version = "0.1.0"
authors = [
    {name = "Martín Abente Lahaye", email = "martin.abente.lahaye@gmail.com"},
]
dependencies = [
    "PyGObject",
]

[tool.setuptools.package-data]
"*" = ["*.*"]

[project.optional-dependencies]
dev = [
    "black",
    "pyflakes",
    "mypy",
]
test = [
    "pytest",
    "pytest-timeout",
    "pytest-cov",
]

[[tool.mypy.overrides]]
module = "gi.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing --cov-fail-under 80"
