pkgdatadir = get_option('prefix') / get_option('datadir') / meson.project_name()
gnome = import('gnome')

gnome.compile_resources('gameeky',
  'gameeky.gresource.xml',
  gresource_bundle: true,
  install: true,
  install_dir: pkgdatadir,
)

python = import('python')

conf = configuration_data()
conf.set('PYTHON', python.find_installation('python3').full_path())
conf.set('VERSION', meson.project_version())
conf.set('localedir', get_option('prefix') / get_option('localedir'))
conf.set('pkgdatadir', pkgdatadir)

configure_file(
  input: 'gameeky/editor/dev.tchx84.Gameeky.Entity.in',
  output: 'dev.tchx84.Gameeky.Entity',
  configuration: conf,
  install: true,
  install_dir: get_option('bindir'),
  install_mode: 'r-xr--r--'
)

configure_file(
  input: 'gameeky/editor/dev.tchx84.Gameeky.Scene.in',
  output: 'dev.tchx84.Gameeky.Scene',
  configuration: conf,
  install: true,
  install_dir: get_option('bindir'),
  install_mode: 'r-xr--r--'
)

configure_file(
  input: 'gameeky/player/dev.tchx84.Gameeky.Player.in',
  output: 'dev.tchx84.Gameeky.Player',
  configuration: conf,
  install: true,
  install_dir: get_option('bindir'),
  install_mode: 'r-xr--r--'
)

configure_file(
  input: 'gameeky/launcher/dev.tchx84.Gameeky.Launcher.in',
  output: 'dev.tchx84.Gameeky.Launcher',
  configuration: conf,
  install: true,
  install_dir: get_option('bindir'),
  install_mode: 'r-xr--r--'
)

configure_file(
  input: 'gameeky/library/dev.tchx84.Gameeky.Exec.in',
  output: 'dev.tchx84.Gameeky.Exec',
  configuration: conf,
  install: true,
  install_dir: get_option('bindir'),
  install_mode: 'r-xr--r--'
)

configure_file(
  input: 'gameeky/common/config.py.in',
  output: 'config.py',
  configuration: conf,
  install: true,
  install_dir: pkgdatadir / 'gameeky' / 'common'
)

gameeky_sources = [
  'gameeky/client/definitions.py',
  'gameeky/client/game/__init__.py',
  'gameeky/client/game/dialogue.py',
  'gameeky/client/game/scene.py',
  'gameeky/client/game/service.py',
  'gameeky/client/game/stats.py',
  'gameeky/client/graphics/entity.py',
  'gameeky/client/graphics/highlight.py',
  'gameeky/client/graphics/hud.py',
  'gameeky/client/graphics/__init__.py',
  'gameeky/client/graphics/scene.py',
  'gameeky/client/graphics/status.py',
  'gameeky/client/__init__.py',
  'gameeky/client/input/cursor.py',
  'gameeky/client/input/__init__.py',
  'gameeky/client/input/keyboard.py',
  'gameeky/client/network/__init__.py',
  'gameeky/client/network/tcp.py',
  'gameeky/client/network/udp.py',
  'gameeky/client/sound/entity.py',
  'gameeky/client/sound/__init__.py',
  'gameeky/client/sound/scene.py',
  'gameeky/common/colors.py',
  'gameeky/common/debug.py',
  'gameeky/common/definitions.py',
  'gameeky/common/dialogue.py',
  'gameeky/common/entity.py',
  'gameeky/common/errors.py',
  'gameeky/common/__init__.py',
  'gameeky/common/logger.py',
  'gameeky/common/message.py',
  'gameeky/common/monitor.py',
  'gameeky/common/payload.py',
  'gameeky/common/scanner.py',
  'gameeky/common/scene.py',
  'gameeky/common/serializeable.py',
  'gameeky/common/session.py',
  'gameeky/common/stats.py',
  'gameeky/common/threaded.py',
  'gameeky/common/utils.py',
  'gameeky/common/vector.py',
  'gameeky/common/widgets/about_window.py',
  'gameeky/common/widgets/__init__.py',
  'gameeky/editor/definitions.py',
  'gameeky/editor/entity.py',
  'gameeky/editor/__init__.py',
  'gameeky/editor/models/actuator_row.py',
  'gameeky/editor/models/area_row.py',
  'gameeky/editor/models/base_row.py',
  'gameeky/editor/models/daytime_row.py',
  'gameeky/editor/models/direction_row.py',
  'gameeky/editor/models/entity.py',
  'gameeky/editor/models/entity_row.py',
  'gameeky/editor/models/entity_session.py',
  'gameeky/editor/models/__init__.py',
  'gameeky/editor/models/layer_row.py',
  'gameeky/editor/models/scene.py',
  'gameeky/editor/models/scene_session.py',
  'gameeky/editor/models/state_row.py',
  'gameeky/editor/scene.py',
  'gameeky/editor/widgets/actuator_row.py',
  'gameeky/editor/widgets/actuators_row.py',
  'gameeky/editor/widgets/animation.py',
  'gameeky/editor/widgets/animation_row.py',
  'gameeky/editor/widgets/animation_settings.py',
  'gameeky/editor/widgets/animations_settings.py',
  'gameeky/editor/widgets/confirmation_save_window.py',
  'gameeky/editor/widgets/confirmation_window.py',
  'gameeky/editor/widgets/dropdown_helper.py',
  'gameeky/editor/widgets/entity_new_window.py',
  'gameeky/editor/widgets/entity_open_window.py',
  'gameeky/editor/widgets/entity.py',
  'gameeky/editor/widgets/entity_row.py',
  'gameeky/editor/widgets/entity_settings.py',
  'gameeky/editor/widgets/entity_window.py',
  'gameeky/editor/widgets/global_settings.py',
  'gameeky/editor/widgets/grid.py',
  'gameeky/editor/widgets/__init__.py',
  'gameeky/editor/widgets/path_row.py',
  'gameeky/editor/widgets/paths_row.py',
  'gameeky/editor/widgets/scene_edit_window.py',
  'gameeky/editor/widgets/scene_entity_popover.py',
  'gameeky/editor/widgets/scene_entity_window.py',
  'gameeky/editor/widgets/scene_new_window.py',
  'gameeky/editor/widgets/scene_open_window.py',
  'gameeky/editor/widgets/scene.py',
  'gameeky/editor/widgets/scene_settings.py',
  'gameeky/editor/widgets/scene_window.py',
  'gameeky/editor/widgets/sound_player.py',
  'gameeky/editor/widgets/sound_row.py',
  'gameeky/editor/widgets/sound_settings.py',
  'gameeky/editor/widgets/sounds_settings.py',
  'gameeky/editor/widgets/tileset.py',
  'gameeky/editor/widgets/tileset_window.py',
  'gameeky/__init__.py',
  'gameeky/player/__init__.py',
  'gameeky/player/player.py',
  'gameeky/player/models/__init__.py',
  'gameeky/player/models/session_guest.py',
  'gameeky/player/models/session_host.py',
  'gameeky/player/widgets/actions_popover.py',
  'gameeky/player/widgets/dialogue.py',
  'gameeky/player/widgets/highlight.py',
  'gameeky/player/widgets/hud.py',
  'gameeky/player/widgets/__init__.py',
  'gameeky/player/widgets/scene.py',
  'gameeky/player/widgets/session_join_window.py',
  'gameeky/player/widgets/session_new_window.py',
  'gameeky/player/widgets/window.py',
  'gameeky/launcher/__init__.py',
  'gameeky/launcher/models/__init__.py',
  'gameeky/launcher/models/project.py',
  'gameeky/launcher/models/session.py',
  'gameeky/launcher/launcher.py',
  'gameeky/launcher/widgets/__init__.py',
  'gameeky/launcher/widgets/confirmation_window.py',
  'gameeky/launcher/widgets/project_edit_window.py',
  'gameeky/launcher/widgets/project_new_window.py',
  'gameeky/launcher/widgets/project_row.py',
  'gameeky/launcher/widgets/project_settings.py',
  'gameeky/launcher/widgets/window.py',
  'gameeky/library/game.py',
  'gameeky/library/__init__.py',
  'gameeky/plugins/__init__.py',
  'gameeky/server/game/actuators/activates_i.py',
  'gameeky/server/game/actuators/activates.py',
  'gameeky/server/game/actuators/affects_i.py',
  'gameeky/server/game/actuators/affects.py',
  'gameeky/server/game/actuators/aggroes.py',
  'gameeky/server/game/actuators/base.py',
  'gameeky/server/game/actuators/collapses.py',
  'gameeky/server/game/actuators/collapses_t.py',
  'gameeky/server/game/actuators/destroys_i.py',
  'gameeky/server/game/actuators/destroys.py',
  'gameeky/server/game/actuators/deteriorates.py',
  'gameeky/server/game/actuators/drops.py',
  'gameeky/server/game/actuators/exhausts.py',
  'gameeky/server/game/actuators/follows.py',
  'gameeky/server/game/actuators/__init__.py',
  'gameeky/server/game/actuators/interacts.py',
  'gameeky/server/game/actuators/propulses.py',
  'gameeky/server/game/actuators/requires.py',
  'gameeky/server/game/actuators/roams.py',
  'gameeky/server/game/actuators/says.py',
  'gameeky/server/game/actuators/says_i.py',
  'gameeky/server/game/actuators/spawns.py',
  'gameeky/server/game/actuators/takes.py',
  'gameeky/server/game/actuators/targets.py',
  'gameeky/server/game/actuators/teleports_i.py',
  'gameeky/server/game/actuators/teleports.py',
  'gameeky/server/game/actuators/transmutes.py',
  'gameeky/server/game/actuators/triggers_i.py',
  'gameeky/server/game/actuators/triggers.py',
  'gameeky/server/game/actuators/uses.py',
  'gameeky/server/game/definitions.py',
  'gameeky/server/game/entity.py',
  'gameeky/server/game/handlers/base.py',
  'gameeky/server/game/handlers/destroy.py',
  'gameeky/server/game/handlers/drop.py',
  'gameeky/server/game/handlers/exhaust.py',
  'gameeky/server/game/handlers/idle.py',
  'gameeky/server/game/handlers/__init__.py',
  'gameeky/server/game/handlers/interact.py',
  'gameeky/server/game/handlers/move.py',
  'gameeky/server/game/handlers/take.py',
  'gameeky/server/game/handlers/use.py',
  'gameeky/server/game/__init__.py',
  'gameeky/server/game/partition.py',
  'gameeky/server/game/scene.py',
  'gameeky/server/game/service.py',
  'gameeky/server/__init__.py',
  'gameeky/server/main.py',
  'gameeky/server/network/__init__.py',
  'gameeky/server/network/tcp.py',
  'gameeky/server/network/udp.py',
]

install_data(gameeky_sources, install_dir: pkgdatadir, preserve_path: true)
